# tesis

./: .gitignore
tesis-crawler/: .gitignore  README.md  docker-compose.yml  pgai_analysis.md  pyproject.toml  run_rescrape_once.py
tesis-crawler/app/: config.py  main.py
tesis-crawler/app/api/: auth.py  query.py  scrape.py  sources.py  status.py  widget.py
tesis-crawler/app/auth/: __init__.py  service.py
tesis-crawler/app/core/: chat_format.py  content_filters.py  domain_utils.py  ingestion_service.py  job_manager.py  page_classifier.py  pdf_service.py  rag_service.py  reranker.py  scraping_service.py  session_memory.py  widget_auth.py  widget_origin.py
tesis-crawler/app/embedding/: models.py
tesis-crawler/app/llm/: client.py  prompts.py
tesis-crawler/app/static/: index.html
tesis-crawler/app/storage/: db_client.py  document_store.py  embeddings_store.py
tesis-crawler/app/tasks/: worker.py
tesis-crawler/docs/: RAG_ITERATIONS.md
tesis-crawler/eval/: eval_set.json  run_baseline.sh  run_eval.py  score_eval.py
tesis-crawler/eval/probe_300/: failures.json  questions.json  rerun_failures.py  results.jsonl  results_v2.jsonl  run.py  summarize.py  summary.json
tesis-crawler/eval/results/: 00_baseline.json  01_speedup.json  01b_speedup_45s.json  02_contextual.json  03_hybrid_rerank.json  04_rewrite_verify.json  05_final.json  05b_final.json  scored_00_baseline.json  scored_01_speedup.json  scored_01b_speedup_45s.json  scored_02_contextual.json  (+5 more)
tesis-crawler/tests/: test_chat_format.py  test_conversation_e2e.py  test_rag_intent_normalization.py
(+52 files in other folders)
